--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <title>struttura</title>
 </head>
 <body>
-  <wrapper id="wrapper">   
+
   <div class="fuchsia"></div>
   <div class="yellow"></div>
   <div class="blue clearfix">
-      <div class="azure"></div>
-      <div class="azure"></div>
-      <div class="azure"></div>
-      <div class="azure"></div>
+      <div class="azure" id="row"></div>
+      <div class="azure" id="column1"></div>
+      <div class="azure" id="column2"></div>
+      <div class="azure" id="column3"></div>
    </div>
 
    <div class="purple"></div>
 
-</wrapper>
 </body>
 </html>
