--- a/index.html
+++ b/index.html
@@ -9,16 +9,23 @@
 </head>
 <body>
 
-  <div class="fuchsia"></div>
-  <div class="yellow"></div>
-  <div class="blue clearfix">
-      <div class="azure" id="row"></div>
-      <div class="azure" id="column1"></div>
-      <div class="azure" id="column2"></div>
-      <div class="azure" id="column3"></div>
-   </div>
+<div id="header"></div>
 
-   <div class="purple"></div>
+  <div class="main-container">
+   <div id="first-container"></div>
+
+   <div id="sec-container" class="clearfix">
+
+        <div class="article" id="row"> </div>
+
+        <div class="article" id="column1"></div>
+        <div class="article" id="column2"></div>
+        <div class="article" id="column3"></div> 
+       
+    </div>
+
+    <div id="footer"></div>
+ 
 
 </body>
 </html>
