--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div id="header"></div>
 
-  <div class="main-container">
+  <div class="main-container"></div>
    <div id="first-container"></div>
 
    <div id="sec-container" class="clearfix">
